--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  bloc_test: ^9.0.2
 
 # The following section is specific to Flutter.
 flutter:
